@@ -6,6 +6,7 @@ Version 1.7.13+svn:
    * Updated translations: Czech , Italian
  * Multiplayer
    * Fixes players to get different side colours across scenarios of mp campaigns
+   * Fix bug #14754: Host can start game before the client has selected a leader
 
 Version 1.7.13-1.8beta6:
  * AI:
